// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change its style on secondary 1`] = `
<a
  className="sc-bdVaJa dOEelP"
  disabled={false}
  href="#"
  onClick={null}
>
  default
</a>
`;

exports[`should change its style on success 1`] = `
<a
  className="sc-bdVaJa ZkBSw"
  disabled={false}
  href="#"
  onClick={null}
>
  default
</a>
`;

exports[`should change its style on warn 1`] = `
<a
  className="sc-bdVaJa kZkzKq"
  disabled={false}
  href="#"
  onClick={null}
>
  default
</a>
`;

exports[`should render a anchor 1`] = `
<a
  className="sc-bdVaJa dcmrHC"
  disabled={false}
  href="#"
  onClick={null}
>
  default
</a>
`;

exports[`should render a button 1`] = `
<button
  className="sc-bwzfXH dpVkfR"
  disabled={false}
  href={null}
  onClick={[Function]}
>
  default
</button>
`;
